He añadido un estilo

--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+<style>
+    .ejemplo{
+        color: brown;
+        font-size: 20;
+    }
+</style>
 </head>
 <body>
     <p class="ejemplo">hola mundo</p>
